--- a/src/components/authForm/authForm.css
+++ b/src/components/authForm/authForm.css
@@ -14,7 +14,7 @@
     align-items: left;
 }
 
-.form-login-input {
+.form-input {
     background: transparent;
     padding: 1.2rem 1.4rem;
     font-size: 1.5rem;
@@ -24,11 +24,11 @@
     color: black;
 }
 
-.form-login-input::placeholder {
+.form-input::placeholder {
     color: #333;
 }
 
-.form-login-input:focus-visible {
+.form-input:focus-visible {
     outline: none;
     border-color: #db1d30;
 }
