--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,90 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@keyframes moveInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-6rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.form__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  background-color: white;
+  padding: 3rem;
+  border-radius: 2rem;
+  width: fit-content;
+  gap: 1rem;
+
+  border: 1px solid rgba(255, 255, 255, .25);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+
+  backdrop-filter: blur(5px);
+  animation: moveInUp 1s linear;
+}
+
+.form-img {
+  width: 50rem;
+}
+
+.form-informations {
+  padding: 0 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+
+}
+
+.redirect {
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.redirect a {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 480px) {
+  .form__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 90%;
+  }
+
+  .form-img {
+    width: 100%;
+  }
+
+  .form-informations {
+    padding: 0rem;
+  }
+}
+
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
