--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,8 @@
 .home__container {
     display: flex;
     flex-direction: column;
-    background-color: rgb(27, 27, 27);
+    background: url('../../../assets/images/stacked-waves-haikei.svg') no-repeat;
+    background-size: cover;
     min-height: 100vh;
     width: 100%;
     justify-content: flex-start;
@@ -13,9 +14,9 @@
 .home-link {
     padding: 1.5rem 2.5rem;
     border-radius: 5rem;
-    background-color: white;
+    background-color: #db1d30;
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 600;
     font-size: 1.6rem;
 }
