--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -7,7 +7,7 @@
     font-weight: 500;
     font-size: 1.6rem;
     transition: 200ms;
-    width: 35%;
+    width: fit-content;
     cursor: pointer;
     font-family: Poppins, "Helvetica Neue";
 }
