--- a/src/components/form-post/formPost.css
+++ b/src/components/form-post/formPost.css
@@ -4,13 +4,25 @@
     gap: 1rem;
     justify-content: center;
     align-items: left;
-    
 }
 
-.form-post-input {
-    background-color: transparent;
-    padding: 1rem 2rem;
-    border: 1px solid #777;
-    border-radius: 5rem;
+.form-photo-preview {
+    width: 100%;
+    text-align: center;
+    border-radius: 2rem;
+}
+
+.form-file-input::file-selector-button  {
+    background: transparent;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.5rem;
+    border: none;
+    border: 1px solid #333;
+    border-radius: 2rem;
     color: black;
+    cursor: pointer;
+}
+
+.form-file-input::file-selector-button:hover {
+    border-color: #db1d30;
 }
