--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -31,4 +31,9 @@
     margin-right: 1rem;
 }
 
-
+@media screen and (max-width:480px) {
+    .post__container {
+        width: 30rem;
+        height: 30rem;
+    }
+}
