--- a/src/pages/createPost/createPost.css
+++ b/src/pages/createPost/createPost.css
@@ -1,4 +1,4 @@
-.post-page__container {
+.create-post__container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,10 +8,10 @@
     background-size: cover;
 }
 
-.post-page-form__container  {
+.create-post-form__container  {
     padding: 4rem;
     border-radius: 2rem;
-    width: 40rem;
+    width: 50rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -22,4 +22,11 @@
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 
     backdrop-filter: blur(15px);
+}
+
+@media screen and (max-width: 480px) {
+    .create-post-form__container  {
+        width: 90%; 
+    }
+    
 }
